# PIDG

./: .gitignore  DEPENDENCIES  LICENSE  LICENSE-DEPENDENCIES  README.md  build-instructions.md  pyproject.toml  requirements.txt
config-samples/: bplogs.sql  config.ini-template
config-samples/ini/: config.ini-template  config.ini-template_0.5
docs/: BPPI Automation Supervisor - Data Bridge Installation and configuration v1.0.docx  BPPI Automation Supervisor - Data Bridge Installation and configuration v1.1.docx  BPPI Automation Supervisor - Data Bridge Installation and configuration.docx
exe/: setup.py
src/: pidg.py
src/bppi/: bppiPipeline.py
src/bppi/repository/: bppiApiRepositoryWrapper.py  bppiRepository.py
src/bppiapi/: bppiPipeline.py
src/bppibridge/: __init__.py
src/config/: cmdLineConfig.py
src/pipelines/: pidgPipeline.py  pipeline.py  pipelineFactory.py
src/pipelines/bppi/: bppiPipeline.py
src/pipelines/bppi/repository/: bppiRepository.py
src/pipelines/buslogs/: blueprismLogs.py
src/pipelines/classes/: bppiPLRBluePrismApi.py  bppiPLRBluePrismRepo.py  bppiPLRCSVFile.py  bppiPLRChorusExtract.py  bppiPLRExcelFile.py  bppiPLRFolder.py  bppiPLRODBC.py  bppiPLRSAPRfcTable.py  bppiPLRXESFile.py
src/pipelines/extractors/: Extractor.py  bpAPIExtractor.py  csvFileExtractor.py  excelFileExtractor.py  folderExtractor.py  odbcExtractor.py  sapRFCTableExtractor.py  xesFileExtractor.py
src/pipelines/extractors/builders/: blueprismSQLBuilder.py
src/pipelines/loaders/bppi/: bppiApiRepositoryWrapper.py  bppiProject.py  bppiRepository.py
src/pipelines/readers/: bpAPIReader.py  odbcReader.py  reader.py  sapRFCTable.py  xesFile.py
src/pipelines/readers/builders/: SQLBuilder.py  blueprismSQLBuilder.py
src/pipelines/repository/: bppiPLRBluePrismApi.py  bppiPLRBluePrismRepo.py  bppiPLRCSVFile.py  bppiPLRChorusExtract.py  bppiPLRExcelFile.py  bppiPLRFolder.py  bppiPLRODBC.py  bppiPLRSAPRfcTable.py  bppiPLRXESFile.py
src/pipelines/transformers/: bplogsTransformer.py
src/utils/: constants.py
src/utils/readers/: xesFile.py
src/utils/wrappers/: xesWrapper.py
tests/: test_BP_Repo.py  test_DB.py  test_EVTMap.py  test_Files.py  test_SAP.py  test_csv.py
tests/data/: test-evtmap.csv
